Added initial implementation of resource types endpoint
